@@ -18,7 +18,7 @@
  *
  * The author may be contacted at gray.watson@antaire.com
  *
- * $Id: chunk.h,v 1.28 1993/11/23 07:41:24 gray Exp $
+ * $Id: chunk.h,v 1.29 1993/11/23 09:03:59 gray Exp $
  */
 
 #ifndef __CHUNK_H__
@@ -87,7 +87,7 @@ IMPORT	int	_chunk_free(const char * file, const unsigned int line,
  * reallocate a section of memory
  */
 IMPORT	void	*_chunk_realloc(const char * file, const unsigned int line,
-				void * oldp, const unsigned int new_size);
+				void * oldp, unsigned int new_size);
 
 /*
  * log present free and used lists
